[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-auto-interface"
version = "0.2.3"
description = "Libary for automatically created interfaces. "
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.11"

