[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib_dzne_auto_interface"
version = "0.5.0"
description = "Libary for automatically created interfaces. "
readme = "README.rst"
license = { file = "LICENSE.txt" }
authors = [{ name = "Johannes", email = "johannes-programming@posteo.org" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
]
requires-python = ">=3.11"

